# Xbotics-Hey-Robot

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  mypy.ini  poe_tasks.toml  pyproject.toml  pytest.ini  ruff.toml
configs/: mock.dev.yaml  mock.test.yaml  xlerobot.real.ubuntu.yaml  xlerobot.real.windows.yaml  xlerobot.sim.ubuntu.yaml  xlerobot.sim.windows.yaml
docker/: Dockerfile
docs/: README_EN.md
docs/architecture/: agent-skill-boundaries.md  capability-rpc-proto.md  system-architecture.md
docs/development/: contributing.md  skill-extension.md
docs/operations/: deployment-matrix.md  feishu.md  runtime-scripts.md  xlerobot-real.md  xlerobot-sim.md
docs/overview/: quality-gates.md  runtime-shape.md
docs/references/: paper-draft.md  project-references.md
frontend/shared/: format.js  status.js
scripts/audio/: __init__.py  list_devices.py
scripts/dev/: clean.py  generate_capability_proto.ps1  publish.py  validate_config.py
scripts/model_downloads/: download_speech_models.py  download_vision_models.py
scripts/ops/: check_platform.py  list_devices.py
src/hey_robot/: __init__.py  frontend_paths.py  user_reply.py
tests/: conftest.py  test_text_encoding.py  test_user_reply.py
tests/agents/: __init__.py  test_agent_templates.py  test_autonomy.py  test_checkpoint.py  test_command_router.py  test_context.py  test_core.py  test_execution_feedback.py  test_interaction.py  test_loop.py  test_notification_runtime.py  test_pending_confirmation_confirmation.py  test_robot_agent_timeout.py  test_scene_evidence.py  test_scene_runtime.py  test_service_execution_feedback.py  test_service_lease.py  test_session_skill_safety.py  test_skill_gateway.py  test_task_contract.py  test_task_events.py  test_task_run.py  test_task_runtime.py  test_task_supervisor.py  test_types.py
tests/app/: test_runner.py
tests/architecture/: test_agent_layer_boundaries.py  test_capability_proto_contract.py  test_no_legacy_surfaces.py
tests/audio/: test_asr.py
tests/capability/: test_catalog_loader.py  test_catalog_policy.py  test_catalog_resolver.py  test_runtime_manager.py  test_sensors_vla_camera.py  test_transport_grpc_server.py
tests/channels/: test_cli.py  test_manager.py  test_voice.py  test_web.py  test_web_events.py
tests/cli/: test_episode.py  test_inspect_capabilities.py  test_main.py
tests/config/: test_resources.py  test_validation.py
tests/deployment/: test_architecture.py  test_runtime_services.py
tests/episode/: test_robot_state.py  test_scope.py  test_store.py
tests/events/: test_store.py
tests/execution_feedback/: __init__.py  test_parser.py
tests/gateway/: test_identity.py  test_service.py
tests/health/: test_report.py
tests/human_follow/: test_stream_service.py
tests/integration/: test_capability_grpc_flow.py
tests/interaction/: test_state.py
tests/logging/: __init__.py  test_logging.py
tests/media/: __init__.py  test_resolver.py  test_store.py
tests/memory/: test_broker.py  test_long_term.py  test_runtime.py  test_scene.py
tests/notifications/: test_presentation.py  test_service.py
(+379 files in other folders)
